--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-debug=true
+debug=false
 management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
+
+logging.level.com.fastcampus.corona=debug
+logging.level.org.springframework.web.servlet=debug
