--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.error.whitelabel.enabled=false
 
 logging.level.com.fastcampus.corona=debug
 logging.level.org.springframework.web.servlet=debug
+
+spring.thymeleaf.cache=false
