feat: Thymeleaf Decoupled Logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ logging.level.com.fastcampus.corona=debug
 logging.level.org.springframework.web.servlet=debug
 
 spring.thymeleaf.cache=false
+spring.thymeleaf3.decoupled-logic=true
