feat: Rest Repositories & QueryDSL 도입

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,15 @@ server.error.whitelabel.enabled=false
 
 logging.level.com.fastcampus.corona=debug
 logging.level.org.springframework.web.servlet=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 
 spring.thymeleaf.cache=false
 spring.thymeleaf3.decoupled-logic=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# API
+spring.data.rest.base-path=/api
