--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ project.ext {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.data:spring-data-rest-hal-explorer'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
