--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,6 @@ repositories {
     mavenCentral()
 }
 
-project.ext {
-    querydslVersion = dependencyManagement.importedProperties['querydsl.version']
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.data:spring-data-rest-hal-explorer'
@@ -38,31 +34,29 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
     // Querydsl
-    implementation "com.querydsl:querydsl-jpa"
-    implementation "com.querydsl:querydsl-collections"
-    annotationProcessor "com.querydsl:querydsl-apt:${project.querydslVersion}:jpa" // querydsl JPAAnnotationProcessor 사용 지정
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-//// Querydsl 설정부
 def generated = 'src/main/generated'
 
-// querydsl QClass 파일 생성 위치를 지정
 tasks.withType(JavaCompile) {
     options.getGeneratedSourceOutputDirectory().set(file(generated))
 }
 
-// java source set 에 querydsl QClass 위치 추가
 sourceSets {
     main.java.srcDirs += [ generated ]
 }
 
-// gradle clean 시에 QClass 디렉토리 삭제
 clean {
     delete file(generated)
 }
