--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,15 @@ spring.thymeleaf.cache=false
 spring.thymeleaf3.decoupled-logic=true
 
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=false
+spring.datasource.url=jdbc:mariadb://localhost:3306/getinline
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.sql.init.mode=always
 
 # API
 spring.data.rest.base-path=/api
