--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.include=secret
+
 debug=false
 management.endpoints.web.exposure.include=*
 server.error.whitelabel.enabled=false
@@ -14,10 +16,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.h2.console.enabled=false
-spring.datasource.url=jdbc:mariadb://localhost:3306/getinline
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.sql.init.mode=always
 
 # API
