chore: Jooq setup

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'nu.studer.jooq' version '8.2'
 }
 
 group = 'com.fastcampus'
@@ -45,6 +46,10 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // Jooq
+    implementation 'org.springframework.boot:spring-boot-starter-jooq'
+    jooqGenerator 'org.postgresql:postgresql:42.5.1'
 }
 
 tasks.named('test') {
@@ -63,4 +68,62 @@ sourceSets {
 
 clean {
     delete file(generated)
+}
+
+jooq {
+    version = '3.18.4'
+
+    configurations {
+        main {
+            generationTool {
+                logging = org.jooq.meta.jaxb.Logging.WARN
+                jdbc {
+                    driver = 'org.postgresql.Driver'
+                    url = 'jdbc:postgresql://localhost:5432/getinline'
+                    user = 'postgres'
+                    password = ''
+                }
+                generator {
+                    name = 'org.jooq.codegen.JavaGenerator'
+                    database {
+                        name = 'org.jooq.meta.postgres.PostgresDatabase'
+                        inputSchema = 'getinline'
+                        includes = '.*'
+                        excludes = ''
+                        forcedTypes {
+                            forcedType {
+                                userType = 'com.fastcampus.corona.constant.EventStatus'
+                                enumConverter = true
+                                includeExpression = '.*\\.event_status'
+                                includeTypes = '.*'
+                            }
+                            forcedType {
+                                userType = 'com.fastcampus.corona.constant.PlaceType'
+                                enumConverter = true
+                                includeExpression = '.*\\.place_type'
+                                includeTypes = '.*'
+                            }
+                        }
+                    }
+                    generate {
+                        deprecated = false
+                        records = true
+                        immutablePojos = true
+                        fluentSetters = true
+                        javaTimeTypes = true
+                    }
+                    target {
+                        packageName = 'com.fastcampus.corona'
+                        directory = 'src/main/generated-jooq'
+                    }
+                    strategy.name = "org.jooq.codegen.DefaultGeneratorStrategy"
+                }
+            }
+        }
+    }
+}
+
+tasks.named('generateJooq').configure {
+    allInputsDeclared = true
+    outputs.cacheIf { true }
 }
