refactor: lazy fetch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size=100
 spring.h2.console.enabled=false
 spring.sql.init.mode=always
-# spring.custom-jooq.format-sql=true
 
 # API
 spring.data.rest.base-path=/api
+
+spring.devtools.restart.quiet-period=700
